style.css
@import url(https://api.fontshare.com/v2/css?f[]=sentient@400,700&display=swap);

body {
    font-family: 'Sentient', serif;
    margin: 0;
}
html, body {
    margin: 0;
    height: 100%;
    overflow: hidden;
}

svg {
    width: clamp(1.3rem, 2vw, 1.8rem);
    height: clamp(1.3rem, 2vw, 1.8rem);
    flex-shrink: 1;
}

.container {
display: grid;
grid-template-columns: 1fr 5fr;
grid-template-rows: 1fr 4fr;
height: 100vh;
}

.sidebar {
    grid-row: 1 / 3;
    background-color: rgb(29, 37, 37);
    color: white;
    display: flex;
    flex-direction: column;
    gap: clamp(1rem, 8vw, 3.5rem);
    padding: clamp(0.8rem, 1.7vw, 2rem);
    fill: white;   
    padding-bottom: 10px;
}

.header {
    display: flex;
    gap: clamp(1rem, 2vw, 1.5rem);
    font-size: clamp(1rem, 3vw, 1.8rem);
}

.header svg {
    width: clamp(1.8rem, 5vw, 3rem);
    height: clamp(1.7rem, 4vw, 2.8rem);
    align-self: center;
}

.tabs, .settings {
    display: flex;
    flex-direction: column;
    font-size: clamp(1rem, 1.4vw, 1.2rem);
}

.duo {
    display: flex;
    align-items: center;
    gap: clamp(1.4rem, 2vw, 1.6rem);
}

.duo svg {
    width: clamp(1.1rem, 1.7vw, 1.4rem);
    height: clamp(1.1rem, 1.7vw, 1.4rem);
    flex-shrink: 1;
}

.navbar {
    grid-column: 2 / 3;
    background-color: rgb(138, 142, 142);
    display: flex;
    flex-direction: column;
    box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5);
    padding: clamp(1rem, 2vw, 1.5rem);
}

.nav-top {
    display: flex;
    justify-content: space-between;
    gap: clamp(5rem, 10vw, 10rem);
    margin-top: 5px;
}

.nav-top-left {
    display: flex;
    gap: clamp(1rem, 4vw, 1.8rem);
    align-items: center;
}

input {
    height: clamp(1.3rem, 2vw, 1.8rem);
    width: clamp(30rem, 45vw, 50rem);
    border: 1px solid black;
    border-radius: 10px;
}

.nav-top-right {
    display: flex;
    gap: clamp(1rem, 4vw, 2rem);
    margin-right: 3rem;
    align-items: center;
}

.nav-top-right img {
    width: clamp(1.8rem, 5vw, 3rem);
    height: clamp(1.8rem, 5vw, 3rem);
    border-radius: 30px;
    align-items: start;
}

.nav-bottom {
    display: flex;
    justify-content: space-between;
    align-items: end;
}

.nav-bottom-left {
    display: flex;
    gap: clamp(1rem, 3vw, 1.5rem);
    align-items: center;
}

.nav-bottom-left img {
    width: clamp(2rem, 6vw, 3.5rem);
    height: clamp(2rem, 6vw, 3.5rem);
    border-radius: 30px;
}

.nav-bottom-right {
    display: flex;
    margin-right: 3rem;
    gap: clamp(1rem, 4vw, 2rem);
    align-items: end;
}

button {
    height: clamp(1.3rem, 3vw, 1.8rem);
    width: clamp(5rem, 6vw, 7rem);
    background-color: rgb(45, 42, 42);
    color: #fff;
    border-radius: 12px;
    border: 2px solid black;
}

.greeting {
    display: flex;
    flex-direction: column;
}
.content {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    background-color: #c9c5c5;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

.center {
    grid-column: 1 / 2;
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 0px 50px 70px 50px;
    align-content: start;
    gap: 20px;
}

.middle-card {
    border-left: solid 5px orange;
    display: flex;
    flex-direction: column;
    border-radius: 9px;
    background-color: #fff;
    width: clamp(5rem, 25vw, 40rem);
    height: clamp(3rem, 20vh, 30rem);
    padding: 20px;
    box-sizing: border-box;
    overflow: auto;
}

.trio-icon {
    align-self: end;
    display: flex;
    gap: clamp(1.1rem, 1.7vw, 1.3rem);
}

.trio-icon svg{
    width: clamp(1.1rem, 2vw, 1.8rem);
    height: clamp(1.1rem, 2vw, 1.8rem);
}

span {
    font-weight: 600;
    font-size: clamp(1rem, 2.3vw, 1.3rem);
}


.right {
    grid-column: 2 / 3;
    display: grid;
}

.right-card {
    border-radius: 9px;
    display: flex;
    flex-direction: column;
    background-color: #fff;
    height: clamp(15rem, 28vh, 30rem);
    width: clamp(12rem, 18vw, 20rem);
    padding: 20px;
    box-sizing: border-box;
    overflow: auto;
    grid-column: 2/3;
    align-items: center;
}

.right-card span{
    font-size: clamp(0.2rem, 1.4vw, 1.2rem);
}

.right-card p {
    font-size: clamp(0.1rem, 1vw, 0.8rem);
}

.span-duo {
    font-size: clamp(1.3rem, 2.6vw, 1.6rem);
    margin: 20px 0px 20px 50px;
}

.right-card-duo {
    display: flex;
    gap: clamp(1.3rem, 2.3vw, 1.5rem);
    justify-content: space-between;
}

.right-card-duo img{
    width: clamp(1.8rem, 4vw, 3rem);
    height: clamp(1.8rem, 4vw, 3rem);
    border-radius: 30px;
    align-items: start;
}

